# transactional-update

./: .editorconfig  .gitignore  COPYING  Makefile.am  NEWS  README.md  aclocal.m4  autogen.sh  configure.ac  t-u.pc.in  tukit.pc.in
.github/workflows/: build.yml
bash-completion/: Makefile.am  transactional-update
dbus/: Makefile.am  READMD.md  README.md  org.opensuse.tukit.Snapshot.xml  org.opensuse.tukit.Transaction.xml  org.opensuse.tukit.conf  org.opensuse.tukit.service.in  tukitd.c  tukitd.d-bus.service  tukitd.service
doc/: Makefile.am  transactional-update-docs.xml  transactional-update.xml  tukit-plugins.md
doc/html/: transactional-update.html  tu-author.html  tu-copyright.html  tu-files.html  tu-howitworks.html  tu-introduction.html  tu-porting.html  tu-setup.html
dracut/: Makefile.am  module-setup.sh  sync-etc-state.cpp  transactional-update-etc-cleaner.service  transactional-update-etc-cleaner.sh  transactional-update-sync-etc-state.service  transactional-update-sync-etc-state.sh
etc/: Makefile.am  transactional-update.conf  tukit.conf
lib/: BlsEntry.cpp  BlsEntry.hpp  Configuration.cpp  Configuration.h  Configuration.hpp  Exceptions.h  Exceptions.hpp  Log.h  Log.hpp  Makefile.am  Mount.cpp  Mount.h  Mount.hpp  Overlay.cpp  Overlay.h  Overlay.hpp  Plugins.cpp  Plugins.hpp  Reboot.cpp  Reboot.hpp  Snapshot.cpp  Snapshot.h  Snapshot.hpp  SnapshotManager.cpp  SnapshotManager.hpp  Supplement.cpp  Supplement.h  Supplement.hpp  Transaction.cpp  Transaction.h  Transaction.hpp  Util.cpp  Util.h  Util.hpp
lib/Bindings/: CBindings.cpp  libtukit.h
lib/Snapshot/: ContainerSnap.cpp  ContainerSnap.hpp  Podman.cpp  Podman.hpp  Snapper.cpp  Snapper.h  Snapper.hpp
logrotate/: Makefile.am  transactional-update
man/: Makefile.am  custom-html.xsl  custom-man.xsl  make-man-index.py  transactional-update.8.xml  transactional-update.conf.5.xml  tukit.conf.5.xml
sbin/: Makefile.am  create_dirs_from_rpmdb.c  transactional-update-helper.cpp  transactional-update.in  tu-rebuild-kdump-initrd
snapper/: 50-etc  Makefile.am
src/: Command.h  Exceptions.h  Makefile.am  Mount.cpp  Mount.h  PackageManager.cpp  PackageManager.h  Snapshot.cpp  Snapshot.h  Transaction.cpp  Transaction.h  TransactionalCommand.cpp  TransactionalCommand.h  TransactionalUpdate.cpp  TransactionalUpdate.h  Util.cpp  Util.h  main.cpp
src/Commands/: Cleanup.cpp  Cleanup.h  DistUpgrade.cpp  DistUpgrade.h  Update.cpp  Update.h
src/Snapshot/: Snapper.cpp  Snapper.h
systemd/: Makefile.am  create-dirs-from-rpmdb.service  prepare-nextroot-for-softreboot  prepare-nextroot-for-softreboot.service.in  transactional-update-cleanup.service.in  transactional-update-cleanup.timer  transactional-update.service  transactional-update.service.in  transactional-update.timer
tests/: Makefile.am  etc_changes.bats  etc_changes_as.root
transkit/: Configuration.cpp  Configuration.h  Makefile.am  TransactionalCommand.cpp  TransactionalCommand.h  main.cpp  transkit.cpp  transkit.h
tukit/: Makefile.am  main.cpp  tukit.cpp  tukit.hpp
